# jpyltime

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt  settings.py
.github/workflows/: docker.yml  main.yml
documents/: attributes_mapping.json
jpyltime/: app.py  postprocessing_fhir2ds.py  preprocessing_fhir2ds.py  settings.py  utils.py  wrapper_fhir2ds.py
jpyltime/documents/: attributes_mapping.json  attributes_mapping_.json
tests/: conftest.py  fhir2dataset_route_test.py  postprocessing_test.py  preprocessing_test.py  wrapper_test.py
