[tool.poetry]
name = "jpyltime"
version = "0.1.0"
description = ""
authors = ["Louise Naudin <naudin.louise@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
